--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -59,7 +59,11 @@ jobs:
       - name: Install dependencies
         run: |
           brew install ccache pkg-config
-          brew link --force libomp  # needed for cmake to find OpenMP
+          # Install libomp 11.1.0
+          # https://github.com/microsoft/LightGBM/issues/4229
+          brew unlink libomp
+          wget https://raw.githubusercontent.com/Homebrew/homebrew-core/fb8323f2b170bd4ae97e1bac9bf3e2983af3fdb0/Formula/libomp.rb
+          brew install--formula libomp.rb
           ccache -M 2G  # See .github/workflows/readme.md for ccache strategy.
       - name: Config and build
         run: |
@@ -118,15 +122,15 @@ jobs:
       # https://github.community/t/how-to-conditionally-include-exclude-items-in-matrix-eg-based-on-branch/16853/6
       matrix:
         python_version: ['3.7', '3.8', '3.9', '3.10']
-        # is_master:
-        #   - ${{ github.ref == 'refs/heads/master' }}
-        # exclude:
-        #   - is_master: false
-        #     python_version: '3.7'
-        #   - is_master: false
-        #     python_version: '3.8'
-        #   - is_master: false
-        #     python_version: '3.9'
+        is_master:
+          - ${{ github.ref == 'refs/heads/master' }}
+        exclude:
+          - is_master: false
+            python_version: '3.7'
+          - is_master: false
+            python_version: '3.8'
+          - is_master: false
+            python_version: '3.9'
 
     env:
       BUILD_CUDA_MODULE: OFF
@@ -170,8 +174,12 @@ jobs:
           cmake --version
           source util/ci_utils.sh
           install_python_dependencies
+          # Install libomp 11.1.0
+          # https://github.com/microsoft/LightGBM/issues/4229
           brew install ccache
-          brew link --force libomp  # needed for cmake to find OpenMP
+          brew unlink libomp
+          wget https://raw.githubusercontent.com/Homebrew/homebrew-core/fb8323f2b170bd4ae97e1bac9bf3e2983af3fdb0/Formula/libomp.rb
+          brew install --formula libomp.rb
           ccache -M 2G  # See .github/workflows/readme.md for ccache strategy.
 
       - name: Config and build wheel
