--- a/.github/workflows/ubuntu-cuda.yml
+++ b/.github/workflows/ubuntu-cuda.yml
@@ -24,7 +24,7 @@ env:
 
 jobs:
   skip-check:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: Skip job for forks
     outputs:
       skip: ${{ steps.check.outputs.skip }}
@@ -42,7 +42,7 @@ jobs:
 
   build-and-run-docker:
     name: Build and run
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     needs: [skip-check]
     if: needs.skip-check.outputs.skip == 'no'
     strategy:
@@ -72,11 +72,15 @@ jobs:
           cd "${GITHUB_WORKSPACE}/.."
           tar -czvf Open3D.tar.gz Open3D
           ls -alh
+      - name: GCloud CLI auth
+        uses: 'google-github-actions/auth@v1'
+        with:
+          project_id: ${{ secrets.GCE_PROJECT }}
+          credentials_json: '${{ secrets.GCE_SA_KEY_GPU_CI }}'
       - name: GCloud CLI setup
-        uses: google-github-actions/setup-gcloud@v1.1.0
+        uses: google-github-actions/setup-gcloud@v1
         with:
           version: ${{ env.GCE_CLI_GHA_VERSION }}
-          service_account_key: ${{ secrets.GCE_SA_KEY_GPU_CI }}
           project_id: ${{ secrets.GCE_PROJECT }}
       - name: VM create
         run: |
