Fix new gcloud auth syntax
Change Ubuntu to ubuntu-latest when using docker or for aux. actions (upload artifact, etc.)
Change deprecated github set-output to env files.

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -59,13 +59,16 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.7'
+      - name: GCloud CLI auth
+        uses: 'google-github-actions/auth@v1'
+        with:
+          project_id: ${{ secrets.GCE_PROJECT }}
+          credentials_json: '${{ secrets.GCE_SA_KEY_GPU_CI }}'
       - name: GCloud CLI setup
-        uses: google-github-actions/setup-gcloud@v1.1.0
+        uses: google-github-actions/setup-gcloud@v1
         with:
           version: ${{ env.GCE_CLI_GHA_VERSION }}
-          service_account_key: ${{ secrets.GCE_SA_KEY_DOCS_CI }}
-          project_id: ${{ secrets.GCE_DOCS_PROJECT }}
-          export_default_credentials: true
+          project_id: ${{ secrets.GCE_PROJECT }}
 
       - name: Install dependencies
         env:
