--- a/.github/workflows/webrtc.yml
+++ b/.github/workflows/webrtc.yml
@@ -27,13 +27,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # macOS 10.15 build does not work on macOS 10.14 due to this issue:
-        # https://openradar.appspot.com/FB7647406
-        # macOS 10.14 build works on both 10.14 and 10.15
-        os: [ubuntu-18.04, macos-12]
+        os: [ubuntu-18.04, macos-11]
         GLIBCXX_USE_CXX11_ABI: [0, 1]
         exclude:
-          - os: macos-12
+          - os: macos-11
             GLIBCXX_USE_CXX11_ABI: 0
     env:
       GLIBCXX_USE_CXX11_ABI: ${{ matrix.GLIBCXX_USE_CXX11_ABI }}
@@ -74,7 +71,7 @@ jobs:
 
   Windows:
     # https://chromium.googlesource.com/chromium/src/+/HEAD/docs/windows_build_instructions.md
-    runs-on: windows-latest
+    runs-on: windows-2019
     env:
       WORK_DIR: "C:\\WebRTC"  # Not enough space in D:
       OPEN3D_DIR: "D:\\a\\open3d\\open3d"
