--- a/.github/workflows/ubuntu-wheel.yml
+++ b/.github/workflows/ubuntu-wheel.yml
@@ -67,13 +67,17 @@ jobs:
           elif [ "${{ env.PYTHON_VERSION }}" = "3.10" ] && [ "${{ env.DEVELOPER_BUILD }}" = "OFF" ]; then
             docker/docker_build.sh cuda_wheel_py310
           fi
-          PIP_PKG_NAME="$(basename ${GITHUB_WORKSPACE}/open3d*.whl)"
+          PIP_PKG_NAME="$(basename ${GITHUB_WORKSPACE}/open3d-[0-9]*.whl)"
+          PIP_CPU_PKG_NAME="$(basename ${GITHUB_WORKSPACE}/open3d-cpu*.whl)"
           echo "PIP_PKG_NAME=$PIP_PKG_NAME" >> $GITHUB_ENV
+          echo "PIP_CPU_PKG_NAME=$PIP_CPU_PKG_NAME" >> $GITHUB_ENV
       - name: Upload wheel to GitHub artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: open3d_linux_x86_64_wheels
-          path: ${{ env.PIP_PKG_NAME }}
+          path: |
+            ${{ env.PIP_PKG_NAME }}
+            ${{ env.PIP_CPU_PKG_NAME }}
           if-no-files-found: error
       - name: GCloud CLI setup (GCE_SA_KEY_DOCS_CI)
         if: ${{ github.ref == 'refs/heads/master' }}
@@ -98,8 +102,11 @@ jobs:
       - name: Upload wheel to GCS
         if: ${{ github.ref == 'refs/heads/master' }}
         run: |
-          gsutil cp ${GITHUB_WORKSPACE}/${{ env.PIP_PKG_NAME }} gs://open3d-releases-master/python-wheels/
-          echo "Download pip package at: https://storage.googleapis.com/open3d-releases-master/python-wheels/${{ env.PIP_PKG_NAME }}"
+          gsutil cp ${GITHUB_WORKSPACE}/${{ env.PIP_PKG_NAME }} \
+            ${GITHUB_WORKSPACE}/${{ env.PIP_CPU_PKG_NAME }} gs://open3d-releases-master/python-wheels/
+          echo "Download pip package at:
+            https://storage.googleapis.com/open3d-releases-master/python-wheels/${{ env.PIP_PKG_NAME }}
+            https://storage.googleapis.com/open3d-releases-master/python-wheels/${{ env.PIP_CPU_PKG_NAME }}"
 
   test-wheel-cpu:
     name: Test wheel CPU
@@ -145,11 +152,24 @@ jobs:
           python -V
           source util/ci_utils.sh
           pi_tag=$(python -c "import sys; print(f'cp{sys.version_info.major}{sys.version_info.minor}')")
-          test_wheel open3d*-"$pi_tag"-*.whl
+          test_wheel open3d-[0-9]*-"$pi_tag"-*.whl
       - name: Run Python unit tests
         run: |
           source util/ci_utils.sh
           echo "Running Open3D python tests..."
+          run_python_tests
+      - name: Test Python package (CPU)
+        env:
+          BUILD_CUDA_MODULE: OFF
+        run: |
+          python -V
+          source util/ci_utils.sh
+          pi_tag=$(python -c "import sys; print(f'cp{sys.version_info.major}{sys.version_info.minor}')")
+          test_wheel open3d-cpu*-"$pi_tag"-*.whl
+      - name: Run Python unit tests (CPU)
+        run: |
+          source util/ci_utils.sh
+          echo "Running Open3D python tests (CPU wheel)..."
           run_python_tests
 
   ready-docs:
