--- a/.github/workflows/ubuntu-wheel-cuda.yml
+++ b/.github/workflows/ubuntu-wheel-cuda.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   build-wheel:
-    name: Build wheel
+    name: Build CUDA wheel
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
