--- a/cpp/open3d/t/pipelines/CMakeLists.txt
+++ b/cpp/open3d/t/pipelines/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(tpipelines PRIVATE
 
 target_sources(tpipelines PRIVATE
     registration/Registration.cpp
+    registration/GlobalRegistration.cpp
     registration/TransformationEstimation.cpp
     registration/Feature.cpp
 )
