--- a/.github/workflows/windows-wheel-cuda.yml
+++ b/.github/workflows/windows-wheel-cuda.yml
@@ -99,7 +99,8 @@ jobs:
             -DBUILD_LIBREALSENSE=ON `
             -DBUILD_WEBRTC=OFF `
             -DBUILD_JUPYTER_EXTENSION=OFF `
-            DBUILD_CUDA_MODULE=ON `
+            -DBUILD_CUDA_MODULE=ON `
+            -DBUILD_EXAMPLES=OFF `
             ${{ env.SRC_DIR }}
 
       - name: Build Python package
