Add support for python3.11
- Update the linux/mac/windows CI to handle python 3.11

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -127,7 +127,7 @@ jobs:
       fail-fast: false
       # https://github.community/t/how-to-conditionally-include-exclude-items-in-matrix-eg-based-on-branch/16853/6
       matrix:
-        python_version: ['3.7', '3.8', '3.9', '3.10']
+        python_version: ['3.7', '3.8', '3.9', '3.10', '3.11']
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
@@ -234,7 +234,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: ['3.7', '3.8', '3.9', '3.10']
+        python_version: ['3.7', '3.8', '3.9', '3.10', '3.11']
         is_master:
           - ${{ github.ref == 'refs/heads/master' }}
         exclude:
